--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Pedro Roa's portfolio</h1>
     <h2>I'm a student that will be a highschool sophomore next year.</h2>
     <hr />
-    <a href="../4.3 HTML Porfolio Project/assets/images/Movie ranking Pedro Version.png"><h1>Movie Ranking Project</h1></a>
+    <a href="./assets/images/Movie ranking Pedro Version.png"><h1>Movie Ranking Project</h1></a>
     <h1>The best movies according to Pedro Roa</h1>
      <img src="./assets/images/Movie ranking Pedro Version.png" height="200" alt="The best movies according to Pedro Roa"/>
      <hr />
